# shutter_engine

./: README.md  hacs.json  pyproject.toml  requirements_test.txt
.github/workflows/: ci.yml
custom_components/shutter_engine/: __init__.py  binary_sensor.py  config.py  config_flow.py  const.py  coordinator.py  entity.py  manifest.json  select.py  sensor.py  strings.json  switch.py
custom_components/shutter_engine/engine/: __init__.py  const.py  hysteresis.py  models.py  resolver.py  slat.py  sun.py  timewindow.py
custom_components/shutter_engine/translations/: de.json  en.json
docs/: example.md
examples/: rooms.json  subentries.json
tests/: __init__.py  conftest.py  test_command_plan.py  test_config.py  test_hysteresis.py  test_models.py  test_resolver.py  test_slat.py  test_sun.py  test_timewindow.py  test_visual_scenarios.py
tests/visual/: __init__.py  plotting.py  scenarios.py  simulation.py
