[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "shutter-engine"
version = "0.2.0"
description = "Home Assistant custom component for centralized, resolver-based shutter control"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

[tool.setuptools]
packages = ["custom_components.shutter_engine", "custom_components.shutter_engine.engine"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
filterwarnings = ["error"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = false
ignore_missing_imports = true
